tests/fixtures/errors/set_has_while_iterate.z
# set_has_while_iterate.z -- a Set iterator holds the exclusive lock:
# even readers (has) exclude for the iteration's lifetime.
main: function is {
    s: (Set String)
    s.add item: "a".string
    with it: s.iterate do for x: it loop {
        h: s.has item: x
        print "x=\{x} h=\{h}"
    }
}
